--- a/partners/templates/account.html
+++ b/partners/templates/account.html
@@ -342,6 +342,15 @@
 
             <div class="input-group">
               <span class="input-group-addon">
+                Ragione sociale
+              </span>
+              <input type='text' class='form-control' 
+                     data-bind='value: profiles.company.job_title'
+                     placeholder='Ragione sociale'>
+            </div>
+
+            <div class="input-group">
+              <span class="input-group-addon">
                 Partita IVA
               </span>
               <input type='text' class='form-control' 
