--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -55,7 +55,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
         <h4>Requisiti</h4>
         <ul  class='prtn-box-req-list'>
             <li>Riconoscersi nel 
-              <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+              <a href='http://www.lpi.org/partnerships/training-partners' target='_blank'>Codice Etico</a>
             </li>
             <li>Offrire consulenza o soluzioni realizzate con Software Libero</li>
         </ul>
@@ -101,7 +101,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
         <h4>Requisiti</h4>
         <ul  class='prtn-box-req-list'>
           <li>Riconoscersi nel 
-            <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+            <a href='http://www.lpi.org/partnerships/training-partners' target='_blank'>Codice Etico</a>
           </li>
           <li>Offrire consulenza o soluzioni realizzate con Software Libero</li>
           <li>Almeno 1 Certificato LPIC-1 (o superiore)</li>
@@ -152,7 +152,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           <h4>Requisiti</h4>
           <ul  class='prtn-box-req-list'>
             <li>Riconoscersi nel 
-              <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+              <a href='http://www.lpi.org/partnerships/training-partners' target='_blank'>Codice Etico</a>
             </li>
             <li>Offrire consulenza o soluzioni realizzate con Software Libero</li>
             <li>Almeno 2 Certificati LPI, di cui almeno uno LPIC-2</li>
@@ -370,7 +370,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           <h4>Requisiti</h4>
           <ul>
             <li>Riconoscersi nel 
-              <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+              <a href='http://www.lpi.org/partnerships/training-partners' target='_blank'>Codice Etico</a>
             </li>
             <li>1 docente certificato LPI Linux Essentials</li>
             <li>1 Aula attrezzata con Linux (1 studente / 1 postazione)</li>
@@ -417,7 +417,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             <h4>Requisiti</h4>
             <ul>
               <li>Riconoscersi nel 
-                <a href='http://www.lpi.org/partnerships/training-partners'>Codice Etico</a>
+                <a href='http://www.lpi.org/partnerships/training-partners' target='_blank'>Codice Etico</a>
               </li>
               <li>1 docente certificato LPI Linux Essentials</li>
               <li>1 Aula attrezzata con Linux (1 studente / 1 postazione)</li>
@@ -484,8 +484,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           </div>
 
           <div  class='prtn-box-button-cont'>
-            <a href="#signup/lpi-aap-le"
-               class="button">Aderisci ora</a>
+             <a href="http://lpi.wufoo.com/forms/q7x2w5/" onclick="window.open(this.href,  null, 'height=720, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false"class="button ">Contattaci ora</a>
           </div>
         </div>
       </li>
@@ -524,8 +523,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
 
           </div>
           <div  class='prtn-box-button-cont'>
-            <a href="#signup/lpi-aap-pro"
-               class="button">Aderisci ora</a>
+             <a href="http://lpi.wufoo.com/forms/q7x2w5/" onclick="window.open(this.href,  null, 'height=720, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false"class="button ">Contattaci ora</a>
           </div>
         </div>
       </li>
@@ -568,8 +566,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           </div>
 
           <div  class='prtn-box-button-cont'>
-            <a href="#signup/lpi-aap-le-gold"
-               class="button">Aderisci ora</a>
+             <a href="http://lpi.wufoo.com/forms/q7x2w5/" onclick="window.open(this.href,  null, 'height=720, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false"class="button ">Contattaci ora</a>
           </div>
         </div>
       </li>
@@ -617,8 +614,7 @@ Servizi premium di supporto alla didattica formiti da ITHUM.
           </div>
 
           <div  class='prtn-box-button-cont'>
-            <a href="#signup/lpi-aap-le-platinum"
-               class="button">Aderisci ora</a>
+             <a href="http://lpi.wufoo.com/forms/q7x2w5/" onclick="window.open(this.href,  null, 'height=720, width=700, toolbar=0, location=0, status=1, scrollbars=1, resizable=1'); return false"class="button ">Contattaci ora</a>
           </div>
         </div>
       </li>
