--- a/partners/templates/offers.html
+++ b/partners/templates/offers.html
@@ -44,12 +44,13 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
         <h4>Benefit</h4>
         <ul class='prtn-box-bonus-list'>
             <li>Disponibilita' utilizzo logo LPI SP</li>
-            <li>Profilo su LPI Italia Partners</li>
-            <li>1 Location</li>
+            <li>Profilo su LPI Italia Partner</li>
+            <li>1 Location
+              <small>(50&euro;/anno per ogni location aggiuntiva)</small></li>
             <li>5 Tag di indicizzazione competenze <br>
-                <small>(10€/anno per ogni competenza aggiuntiva)</small></li>
+                <small>(10&euro;/anno per ogni competenza aggiuntiva)</small></li>
             <li>2 Referenze pubblicate<br>
-             <small>(10€/UT per ogni referenza aggiuntiva)</small></li>
+             <small>(10&euro;/UT per ogni referenza aggiuntiva)</small></li>
         </ul>
         <br />
         <h4>Requisiti</h4>
@@ -89,7 +90,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
         <h4>Benefit</h4>
         <ul class='prtn-box-bonus-list'>
           <li>Disponibilita' utilizzo logo LPI CSP</li>
-          <li>Profilo su LPI Italia Partners</li>
+          <li>Profilo su LPI Italia Partner</li>
           <li>2 Location<br> 
              <small>(50€/anno per ogni location aggiuntiva)</small></li>
           <li>10 Tag di indicizzazione competenze <br>
@@ -136,7 +137,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           <h4>Benefit</h4>
           <ul class='prtn-box-bonus-list'>
             <li>Disponibilita' utilizzo logo LPI CSP-GOLD</li>
-            <li>Profilo su LPI Italia Partners</li>
+            <li>Profilo su LPI Italia Partner</li>
             <li>10 Location <br><small>(50€/anno per ogni location aggiuntiva)</small></li>
             <li>25 Tag di indicizzazione competenze <br>
               <small>(10€/anno per ogni competenza aggiuntiva)</small></li>
@@ -360,8 +361,8 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           <h4>Benefit</h4>
           <ul class='prtn-box-bonus-list'>
             <li>Uso del logo ATP LE</li>
-            <li>Profilo su LPI Italia Partners</li>
-            <li>Possiblità di svolgere esami LE in sede*</li>
+            <li>Profilo su LPI Italia Partner</li>
+            <li>Possiblit&agrave; di svolgere esami LE in sede*</li>
             <li>Sconto sugli Esami LE</li>
             <li>Inclusa 1 Location (50&euro;/anno per location aggiuntive)</li>
             <li>Post sulla pagina Facebook di LPI Italia (max 4)</li>
@@ -377,6 +378,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             <li>Connessione ad Internet</li>
             <li>Pagamento della partnership con carta di credito</li>
           </ul>
+          * per svolgere esami LE in sede &egrave; necessario accreditarsi come Test Center LPI oppure essere accreditati come Test Center Pearson VUE
         </div>
         <div  class='prtn-box-button-cont'>
           <a href="#signup/lpi-atp-le" 
@@ -403,7 +405,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
           <h4>Benefit</h4>
             <ul class='prtn-box-bonus-list'>
               <li>Uso del logo ATP</li>
-              <li>Profilo su LPI Italia Partners</li>
+              <li>Profilo su LPI Italia Partner</li>
               <li>Accesso alla banca dati di Docenti Certificati (LCT) di LPI Italia</li>
               <li>Possiblità di svolgere esami LE in sede*</li>
               <li>Incluse 2 Location</li>
@@ -423,6 +425,8 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
               <li>1 Aula attrezzata con Linux (1 studente / 1 postazione)</li>
               <li>Connessione ad Intenrnet</li>
             </ul>
+            *per svolgere esami LPIC in sede è necessario essere accreditati come Test Center Pearson VUE<br>
+            ** Il servizio di Assistenza Tecnica ai docenti sarà attivato successivamente
         </div>
         <div  class='prtn-box-button-cont'>
           <a href="#signup/lpi-atp-pro"
@@ -432,8 +436,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
     </li>
   </ul>
   <div>
-    *per svolgere esami LPIC in sede è necessario essere accreditati come Test Center Pearson VUE<br>
-    ** Il servizio di Assistenza Tecnica ai docenti sarà attivato successivamente
+
   </div>
   </div>
 </div>
@@ -468,7 +471,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             <h4>Benefit</h4>
             <ul class='prtn-box-bonus-list'>
                 <li>Disponibilita' utilizzo logo LPI AAP LE</li>
-                <li>Profilo su LPI Italia Partners</li>
+                <li>Profilo su LPI Italia Partner</li>
                 <li>Esame per certificare il docente gratuito*</li>
                 <li>Sconto su esami LE</li>
                 <li>Possibilit&agrave; svolgere esami*</li>
@@ -509,7 +512,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             <h4>Benefit</h4>
             <ul class='prtn-box-bonus-list'>
                 <li>Disponibilita' utilizzo logo LPI AAP</li>
-                <li>Profilo su LPI Italia Partners</li>
+                <li>Profilo su LPI Italia Partner</li>
                 <li>Sconto su tutti gli esami</li>
                 <li>Possibilit&agrave; svolgere esami*</li>
                 <li>Possibilit&agrave; svolgere esami PaperBased*</li>
@@ -548,7 +551,7 @@ Non perdere l'occasione di entrare a far parte di una delle comunità dedicate a
             <ul class='prtn-box-bonus-list'>
                 <li>Disponibilita' utilizzo logo LPI AAP LE</li>
                 <li>Sconto su esami LE</li>
-                <li>Profilo su LPI Italia Partners</li>
+                <li>Profilo su LPI Italia Partner</li>
                 <li>Esame per certificare il docente gratuito*</li>
                 <li>Possibilit&agrave; svolgere esami*</li>
                 <li>Accesso al materiale didattico (inglese) su piattaforma Cisco Netspace</li>
@@ -595,7 +598,7 @@ Servizi premium di supporto alla didattica formiti da ITHUM.
                 <li>Disponibilita' utilizzo logo LPI AAP LE</li>
                 <li>Fast Start: 6 mesi per certificare il tuo docente</li>
                 <li>Sconto su esami LE</li>
-                <li>Profilo su LPI Italia Partners</li>
+                <li>Profilo su LPI Italia Partner</li>
                 <li>Assistenza tecnica telefonica/mail</li>
                 <li>Corso Fast Track per docenti</li>
                 <li>Possibilit&agrave; svolgere esami*</li>
